--- a/todo_FE/css/common.css
+++ b/todo_FE/css/common.css
@@ -1,2 +1,21 @@
 /* 전역 css */
 /* 공통 css 정의 */
+
+header {
+    display: flex;
+    justify-content: space-between;
+}
+
+header ul {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+}
+
+header li {
+    margin-left: 20px;
+}
+
+header a {
+    text-decoration: none;
+}
