[수정] Header 색상 추가및 HJ Board 추가

--- a/todo_FE/css/common.css
+++ b/todo_FE/css/common.css
@@ -2,8 +2,11 @@
 /* 공통 css 정의 */
 body {
     font-size: 24px;
+    margin: 0;
 }
 
 #main-logo {
     font-size: 40px;
+    font-weight: bold;
+    color: rgb(100, 20, 100);
 }
