--- a/todo_FE/css/main.css
+++ b/todo_FE/css/main.css
@@ -8,6 +8,28 @@ main {
   text-align: center;
 }
 
+form {
+  width: 40rem;
+  margin: 5rem auto;
+  background-color: rgb(196, 184, 231);
+  border-radius: 1rem;
+}
+
 ul {
   list-style: none;
+  margin: 1rem;
+  padding: 3rem;
+}
+
+input {
+  border-radius: 5px;
+  border-color: blueviolet;
+}
+
+button {
+  border-radius: 0.2rem;
+}
+
+button:hover {
+  background-color: rgb(180, 180, 231);
 }
