--- a/todo_FE/css/common.css
+++ b/todo_FE/css/common.css
@@ -10,3 +10,30 @@ body {
     font-weight: bold;
     color: rgb(100, 20, 100);
 }
+
+.main-btn {
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.main-btn span {
+    width: 100%;
+    height: 3px;
+    background-color: blue;
+}
+
+/* 
+전역 용도 button
+*/
+.btn-create {
+    background-color: blue;
+    color: white;
+}
+
+.btn-update {
+    background-color: green;
+    color: white;
+}
