--- a/todo_FE/css/main.css
+++ b/todo_FE/css/main.css
@@ -1,14 +1,11 @@
-html {
-  font-family: "roboto", sans-serif;
-}
-
 /* 일단 제가 하는 todo페이지만 폰트 먹어놨어요 말하시면 전역으로 먹이겠음 */
 
 main {
   text-align: center;
+  font-family: "roboto", sans-serif;
 }
 
-form {
+section {
   width: 40rem;
   margin: 5rem auto;
   background-color: rgb(196, 184, 231);
@@ -16,9 +13,9 @@ form {
 }
 
 ul {
-  list-style: none;
-  margin: 1rem;
-  padding: 3rem;
+  list-style: decimal;
+  margin: 0rem 2rem;
+  padding: 1rem;
 }
 
 input {
