[수정] 공통 public 파일 이동

--- a/todo_FE/views/index.html
+++ b/todo_FE/views/index.html
@@ -29,7 +29,7 @@
       <nav>
         <ul>
           <li><a href="/board/YJ_Board.html">BoardYJ-TIL</a></li>
-          <li><a href="/board/HJ_Board.html">BoardHJ-TIL</a></li>
+          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
         </ul>
       </nav>
       <a href="" class="main-btn">
