[수정] header 로그인 버튼 추가

--- a/todo_FE/views/index.html
+++ b/todo_FE/views/index.html
@@ -32,6 +32,12 @@
           <li><a href="/hjBoard">BoardHJ-TIL</a></li>
         </ul>
       </nav>
+      <nav>
+        <ul>
+          <li><a href="" onclick=notReadyMessage()>Sign Up</a></li>
+          <li><a href="" onclick=notReadyMessage()>Log In</a></li>
+        </ul>
+      </nav>
       <a href="" class="main-btn">
         <span></span>
         <span></span>
