[수정] 결재 페이지 라우팅

--- a/todo_FE/views/index.html
+++ b/todo_FE/views/index.html
@@ -30,6 +30,7 @@
         <ul>
           <li><a href="/board/YJ_Board.html">BoardYJ-TIL</a></li>
           <li><a href="/hjBoard">BoardHJ-TIL</a></li>
+          <li><a href="/approvalList">Approval</a></li>
         </ul>
       </nav>
       <nav>
