[수정] 헤더의 메인로고, yj,hj 각 게시판 라우팅 정리

--- a/todo_FE/views/board/HJ_Board.html
+++ b/todo_FE/views/board/HJ_Board.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/board_til.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/board_til.css" />
+  </head>
+  <body>
     <header class="main-header">
-        <a href="/index.html" id="main-logo">YJHJ</a>
-        <nav>
-            <ul>
-                <li><a href="" onclick="boardYJBind()">BoardYJ</a></li>
-                <li><a href="" onclick="boardHJBind()">BoardHJ</a></li>
-            </ul>
-        </nav>
+      <a href="/" id="main-logo">YJHJ</a>
+      <nav>
+        <ul>
+          <li><a href="" onclick="boardYJBind()">BoardYJ</a></li>
+          <li><a href="" onclick="boardHJBind()">BoardHJ</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <h2>HJ Board</h2>
-        <!-- list를 Grid 형식으로 만들어볼까 고민 중 -->
-        <!-- 글 목록 -->
-        <section class="hjBoard-list">
-            <table>
-                <tr>
-                    <td>3</td>
-                    <td>안녕하세요</td>
-                    <td>2022-06-14</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>안녕하세요</td>
-                    <td>2022-06-14</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>안녕하세요</td>
-                    <td>2022-06-14</td>
-                </tr>
-            </table>
-        </section>
-        <!-- 글 내용 -->
-        <section>
-            <table>
-                <tr>
-                    <td>안녕하세요</td>
-                </tr>
-                <tr>
-                    <td>안녕하세요하이하이</td>
-                </tr>
-            </table>
-        </section>
-        <!-- 글 목록 -->
-        <section class="hjBoard-list">
-            <table>
-                <tr>
-                    <td>3</td>
-                    <td>안녕하세요</td>
-                    <td>2022-06-14</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>안녕하세요</td>
-                    <td>2022-06-14</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>안녕하세요</td>
-                    <td>2022-06-14</td>
-                </tr>
-            </table>
-        </section>
+      <h2>HJ Board</h2>
+      <!-- list를 Grid 형식으로 만들어볼까 고민 중 -->
+      <!-- 글 목록 -->
+      <section class="hjBoard-list">
+        <table>
+          <tr>
+            <td>3</td>
+            <td>안녕하세요</td>
+            <td>2022-06-14</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>안녕하세요</td>
+            <td>2022-06-14</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>안녕하세요</td>
+            <td>2022-06-14</td>
+          </tr>
+        </table>
+      </section>
+      <!-- 글 내용 -->
+      <section>
+        <table>
+          <tr>
+            <td>안녕하세요</td>
+          </tr>
+          <tr>
+            <td>안녕하세요하이하이</td>
+          </tr>
+        </table>
+      </section>
+      <!-- 글 목록 -->
+      <section class="hjBoard-list">
+        <table>
+          <tr>
+            <td>3</td>
+            <td>안녕하세요</td>
+            <td>2022-06-14</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>안녕하세요</td>
+            <td>2022-06-14</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>안녕하세요</td>
+            <td>2022-06-14</td>
+          </tr>
+        </table>
+      </section>
     </main>
     <footer>
-        <div>
-            Footer K
-        </div>
+      <div>Footer K</div>
     </footer>
-</body>
+  </body>
 </html>
