--- a/todo_FE/views/index.html
+++ b/todo_FE/views/index.html
@@ -25,17 +25,17 @@
         추 후 컴포넌트화 예정이며 기능도 추가하자!
     -->
     <header class="main-header">
-      <a href="/index.html" id="main-logo">YJHJ</a>
+      <a href="/" id="main-logo">YJHJ</a>
       <nav>
         <ul>
-          <li><a href="/board/YJ_Board.html">BoardYJ-TIL</a></li>
+          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
           <li><a href="/hjBoard">BoardHJ-TIL</a></li>
         </ul>
       </nav>
       <nav>
         <ul>
-          <li><a href="" onclick=notReadyMessage()>Sign Up</a></li>
-          <li><a href="" onclick=notReadyMessage()>Log In</a></li>
+          <li><a href="" onclick="notReadyMessage()">Sign Up</a></li>
+          <li><a href="" onclick="notReadyMessage()">Log In</a></li>
         </ul>
       </nav>
       <a href="" class="main-btn">
