--- a/todo_FE/views/board/YJ_Board.html
+++ b/todo_FE/views/board/YJ_Board.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <header class="main-header">
-      <a href="/index.html" id="main-logo">YJHJ</a>
+      <a href="/" id="main-logo">YJHJ</a>
       <nav>
         <ul>
-          <li><a href="/board/YJ_Board.html">BoardYJ-TIL</a></li>
-          <li><a href="/board/HJ_Board.html">BoardHJ-TIL</a></li>
+          <li><a href="/board/YJ_Board.html">BoardYJ</a></li>
+          <li><a href="/board/HJ_Board.html">BoardHJ</a></li>
         </ul>
       </nav>
     </header>
