--- a/todo_FE/views/index.html
+++ b/todo_FE/views/index.html
@@ -63,12 +63,9 @@
         </div>
 
         <!-- <div></div>   입력된 todo의 List -->
-        <ul>
-          <li id="todoList">안녕하십니까요?</li>
+        <ul id="todoList">
+          <li>안녕하십니까요?</li>
         </ul>
-
-        <button onclick="todoUpdate()">수정</button>
-        <button onclick="todoDelite()">삭제</button>
       </section>
 
       <!-- 
