--- a/todo_FE/views/board/approval/Approval_List.html
+++ b/todo_FE/views/board/approval/Approval_List.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/common.css" />
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Approval List</h1>
-    <button>
-        <a href="/approvalRequest">기안</a>
-        </button>
+    <main class="base_form">
+        <h1>Approval List</h1>
+        <div>
+            <div>
+                <button>
+                    <a href="/approvalRequest">기안</a>
+                </button>
+            </div>
+            <table>
+                <tr>
+                    <th>순번</th>
+                    <th>제목</th>
+                    <th>결재상황</th>
+                    <th>작성자</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+    </main>
 </body>
+
 </html>
