--- a/todo_FE/views/index.html
+++ b/todo_FE/views/index.html
@@ -35,8 +35,10 @@
       </nav>
       <nav>
         <ul>
-          <li><a href="" onclick="notReadyMessage()">Sign Up</a></li>
-          <li><a href="" onclick="notReadyMessage()">Log In</a></li>
+          <!-- <li><a href="" onclick="notReadyMessage()">Sign Up</a></li>
+          <li><a href="" onclick="notReadyMessage()">Log In</a></li> -->
+          <li><a href="/signup">SignUp</a></li>
+          <li><a href="/login">Login</a></li>
         </ul>
       </nav>
       <a href="" class="main-btn">
