--- a/todo_FE/views/board/approval/Approval_List.html
+++ b/todo_FE/views/board/approval/Approval_List.html
@@ -13,25 +13,38 @@
     <main class="base_form">
         <h1>Approval List</h1>
         <div>
-            <div>
-                <button>
+            <div class="btn_area">
+                <button class="btn-search">
                     <a href="/approvalRequest">기안</a>
                 </button>
             </div>
-            <table>
-                <tr>
-                    <th>순번</th>
-                    <th>제목</th>
-                    <th>결재상황</th>
-                    <th>작성자</th>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
+            <div>
+                <table>
+                    <colgroup>
+                        <col width="25%">
+                        <col width="25%">
+                        <col width="25%">
+                        <col width="25%">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>순번</th>
+                            <th>제목</th>
+                            <th>결재상황</th>
+                            <th>작성자</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
     </main>
 </body>
