--- a/todo_FE/views/board/approval/Approval_Form.html
+++ b/todo_FE/views/board/approval/Approval_Form.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/approval.css" />
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Approval Form</h1>
+    <main class="base_form">
+        <h1>Approval Form</h1>
+        <div>
+            <div class="btn_area">
+                <button class="btn-search">
+                    <a href="/approvalRequest">기안</a>
+                </button>
+            </div>
+            <div class="row">
+                <table class="header-table">
+                    <colgroup>
+                        <col width="15%">
+                        <col width="70%">
+                        <col width="15%">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>문서번호</th>
+                            <td rowspan="4" style="font-size: 3rem;">결재</td>
+                            <th>문서유형</th>
+                        </tr>
+                        <tr>
+                            <td>00001</td>
+                            <td>휴가</td>
+                        </tr>
+                        <tr>
+                            <th>결재상태</th>
+                            <th>참조번호</th>
+                        </tr>
+                        <tr>
+                            <td>반려</td>
+                            <td>0002</td>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
