--- a/todo_FE/views/login.ejs
+++ b/todo_FE/views/login.ejs
@@ -26,7 +26,7 @@
     </header>
   <body>
     <div id="login-section">
-      <form class="login-form">
+      <form class="login-form" action="/login" method="POST">
         <h1>로그인</h1>
         ID : <input id="id" type="text" placeholder="아이디를 입력하세요" />
         <br />
