--- a/todo_FE/views/signup.ejs
+++ b/todo_FE/views/signup.ejs
@@ -26,14 +26,13 @@
       </nav>
     </header>
     <main>
-      <h1>Join my website!</h1>
-      <form action="/signup" method="post">
-        ID : <input type="text" name="id" /><br />
-        PassWord : <input type="password" name="pw" /><br />
-        PassWord2 : <input type="password" name="pw2" /><br />
-        Username : <input type="text" name="uname" /><br />
-        Email : <input type="email" name="email" /> <br />
-        <input type="submit" name="submit" />
+      <h1>회원가입을 하십쇼</h1>
+      <form action="/signup" method="POST">
+        ID : <input type="text" id="userid" name="userid" /><br />
+        PassWord : <input type="password" id="password" name="password" /><br />
+        Username : <input type="text" id="username" name="username" /><br />
+        Email : <input type="email" id="email" name="email" /> <br />
+        <button>Sign up</button>
       </form>
     </main>
   </body>
