--- a/todo_FE/views/index.ejs
+++ b/todo_FE/views/index.ejs
@@ -30,7 +30,7 @@
         <ul>
           <li><a href="/yjBoard">BoardYJ-TIL</a></li>
           <li><a href="/hjBoard">BoardHJ-TIL</a></li>
-          <li><a href="/approvalList">Approval</a></li>
+          <li><a href="/approval/approvalList ">Approval</a></li>
         </ul>
       </nav>
       <nav>
