--- a/todo_FE/views/login.ejs
+++ b/todo_FE/views/login.ejs
@@ -26,12 +26,12 @@
     </header>
   <body>
     <div id="login-section">
-      <form class="login-form" action="/login" method="POST">
+      <form class="login-form" action="/login" method="GET">
         <h1>로그인</h1>
-        ID : <input id="id" type="text" placeholder="아이디를 입력하세요" />
+        ID : <input id="id" type="text" placeholder="아이디를 입력하세요" name="userid"/>
         <br />
         PW :
-        <input id="password" type="text" placeholder="비밀번호를 입력하세요" />
+        <input id="password" type="text" placeholder="비밀번호를 입력하세요" name="password"/>
 
         <button id="login-btn">로그인</button>
       </form>
