--- a/todo_FE/views/login.ejs
+++ b/todo_FE/views/login.ejs
@@ -28,10 +28,10 @@
     <div id="login-section">
       <form class="login-form" action="/login" method="POST">
         <h1>로그인</h1>
-        ID : <input id="id" type="text" placeholder="아이디를 입력하세요" />
+        ID : <input id="id" type="text" name="userid" placeholder="아이디를 입력하세요" />
         <br />
         PW :
-        <input id="password" type="text" placeholder="비밀번호를 입력하세요" />
+        <input id="password" type="text" name="password" placeholder="비밀번호를 입력하세요" />
 
         <button id="login-btn">로그인</button>
       </form>
