[추가, 수정] signup, login css수정 , 게시글작성 페이지 추가, 페이지 연결

--- a/todo_FE/views/board/YJ_Board.html
+++ b/todo_FE/views/board/YJ_Board.html
@@ -56,7 +56,7 @@
               <td>2022.07.05</td>
             </tr>
           </table>
-          <button>게시물 추가</button>
+          <button><a href="/yjBoard/write">게시물 추가</a></button>
         </div>
       </section>
     </main>
