--- a/todo_FE/views/login.ejs
+++ b/todo_FE/views/login.ejs
@@ -25,15 +25,19 @@
       </nav>
     </header>
   <body>
-    <div id="login-section">
-      <form class="login-form" action="/login" method="GET">
-        <h1>로그인</h1>
-        ID : <input id="id" type="text" name="userid" placeholder="아이디를 입력하세요" />
-        <br />
-        PW :
-        <input id="password" type="text" name="password" placeholder="비밀번호를 입력하세요" />
-
-        <button id="login-btn">로그인</button>
+    <div class="login-section">
+      <form class="login-input" action="/login" method="GET">
+        <h1>Login</h1>
+				<div class="login-id">
+        <input id="id" type="text" placeholder="아이디" name="userid"/>
+				</div>
+				<div class="login-pw">
+        <input id="password" type="text" placeholder="비밀번호" name="password"/>
+					</div>
+					<div class="login-btn">
+        <button>Login</button>
+				</div>
+				<div class="idpw"><a href="">아이디 찾기 </a><a href=""> / 비밀번호 찾기</a></div>
       </form>
     </div>
   </body>
