--- a/todo_FE/public/css/login.css
+++ b/todo_FE/public/css/login.css
@@ -1,8 +1,69 @@
-.login-form {
+/* .login-input {
+  font-size: small;
   padding: 2rem;
-  margin: 4rem;
+  margin: 4rem auto;
   text-align: center;
-  border: 1px solid rgb(207, 186, 207);
-  border-radius: 1rem;
+  border: 2px solid rgb(207, 186, 207);
+  border-radius: 2rem;
   background-color: rgb(207, 186, 207);
+  display: flex;
+  width: 80%;
+  align-items: center;
+}
+
+.login-input input {
+  width: 40%;
+  height: 1rem;
+  margin: auto auto;
+} */
+
+body {
+  background-color: rgb(180, 180, 231);
+}
+
+.login-section {
+  text-align: center;
+  margin: auto;
+
+  width: 400px;
+  height: 400px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+h1 {
+  margin-top: 30px;
+  font-size: 50px;
+}
+
+input {
+  text-align: left;
+  width: 250px;
+  height: 30px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.login-id {
+  padding-top: 20px;
+}
+
+.login-pw {
+  padding-bottom: 30px;
+  padding-top: 20px;
+}
+
+button {
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  background: white;
+}
+
+.idpw {
+  font-size: 10px;
+  margin: 10px;
+  font-weight: bold;
 }
