[추가] header 공통설정, 상세페이지 추가, 작성페이지 db에 데이터 저장설정

--- a/todo_FE/views/board/YJ_Board.html
+++ b/todo_FE/views/board/YJ_Board.html
@@ -10,12 +10,19 @@
     <link rel="stylesheet" href="/css/header.css" />
   </head>
   <body>
-    <header class="main-header">
+       <header class="main-header">
       <a href="/" id="main-logo">YJHJ</a>
       <nav>
         <ul>
-          <li><a href="/yjBoard">BoardYJ</a></li>
-          <li><a href="/hjBoard">BoardHJ</a></li>
+          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
+          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
+          <li><a href="/approvalList">Approval</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li><a href="/signup">SignUp</a></li>
+          <li><a href="/login">Login</a></li>
         </ul>
       </nav>
     </header>
@@ -33,7 +40,7 @@
             </tr>
             <tr>
               <td>1</td>
-              <td>첫 번째 글!</td>
+              <td>첫 번째 글!</a></td>
               <td>YJ</td>
               <td>2022.07.05</td>
             </tr>
