--- a/todo_FE/views/board/HJ_Board.html
+++ b/todo_FE/views/board/HJ_Board.html
@@ -14,8 +14,15 @@
       <a href="/" id="main-logo">YJHJ</a>
       <nav>
         <ul>
-          <li><a href="" onclick="boardYJBind()">BoardYJ</a></li>
-          <li><a href="" onclick="boardHJBind()">BoardHJ</a></li>
+          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
+          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
+          <li><a href="/approvalList">Approval</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li><a href="/signup">SignUp</a></li>
+          <li><a href="/login">Login</a></li>
         </ul>
       </nav>
     </header>
