--- a/todo_FE/views/board/approval/Approval_Form.ejs
+++ b/todo_FE/views/board/approval/Approval_Form.ejs
@@ -1,70 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/approval.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <header class="main-header">
+      <a href="/" id="main-logo">YJHJ</a>
+      <nav>
+        <ul>
+          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
+          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
+          <li><a href="/approvalList">Approval</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li><a href="/signup">SignUp</a></li>
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="base_form">
-        <h1>Approval Form</h1>
-        <div>
-            <form action="/approval/approvalRequest" , method="POST">
-                <div class="btn_area">
-                    <button class="btn-search">
-                        기안
-                    </button>
-                </div>
-                <div class="row">
-                    <table class="header-table">
-                        <colgroup>
-                            <col width="15%">
-                            <col width="70%">
-                            <col width="15%">
-                        </colgroup>
-                        <thead>
-                            <tr>
-                                <th>문서번호</th>
-                                <td rowspan="4" style="font-size: 3rem;">결재</td>
-                                <th>문서유형</th>
-                            </tr>
-                            <tr>
-                                <td>00001</td>
-                                <td>휴가</td>
-                            </tr>
-                            <tr>
-                                <th>결재상태</th>
-                                <th>참조번호</th>
-                            </tr>
-                            <tr>
-                                <td><span>
-                                        기안
-                                    </span>
-                                </td>
-                                <td>0002</td>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th>제목</th>
-                                <td><input type="text" name="title"></td>
-                            </tr>
-                            <tr>
-                                <th>사유</th>
-                                <td><textarea name="content" id="" cols="30" rows="10"></textarea></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </form>
-
-        </div>
+      <h1>Approval Form</h1>
+      <div>
+        <form action="/approval/approvalRequest" , method="POST">
+          <div class="btn_area">
+            <button class="btn-search">기안</button>
+          </div>
+          <div class="row">
+            <table class="header-table">
+              <colgroup>
+                <col width="15%" />
+                <col width="70%" />
+                <col width="15%" />
+              </colgroup>
+              <thead>
+                <tr>
+                  <th>문서번호</th>
+                  <td rowspan="4" style="font-size: 3rem">결재</td>
+                  <th>문서유형</th>
+                </tr>
+                <tr>
+                  <td>00001</td>
+                  <td>휴가</td>
+                </tr>
+                <tr>
+                  <th>결재상태</th>
+                  <th>참조번호</th>
+                </tr>
+                <tr>
+                  <td><span> 기안 </span></td>
+                  <td>0002</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th>제목</th>
+                  <td><input type="text" name="title" /></td>
+                </tr>
+                <tr>
+                  <th>사유</th>
+                  <td>
+                    <textarea
+                      name="content"
+                      id=""
+                      cols="30"
+                      rows="10"
+                    ></textarea>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </form>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
