--- a/todo_FE/views/board/approval/Approval_List.ejs
+++ b/todo_FE/views/board/approval/Approval_List.ejs
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/common.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <header class="main-header">
+      <a href="/" id="main-logo">YJHJ</a>
+      <nav>
+        <ul>
+          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
+          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
+          <li><a href="/approvalList">Approval</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li><a href="/signup">SignUp</a></li>
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </nav>
+    </header>
     <main class="base_form">
-        <h1>Approval List</h1>
-        <div>
-            <div class="btn_area">
-                <button class="btn-search">
-                    <a href="/approval/approvalRequest">기안</a>
-                </button>
-            </div>
-            <div>
-                <table>
-                    <colgroup>
-                        <col width="25%">
-                        <col width="25%">
-                        <col width="25%">
-                        <col width="25%">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>순번</th>
-                            <th>제목</th>
-                            <th>결재상황</th>
-                            <th>작성자</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% for(const approval of approvals ){ %>
-                            <tr>
-                                <td></td>
-                                <td>
-                                    <%= approval.title %>   
-                                </td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <%}%>
-                    </tbody>
-                </table>
-            </div>
-
+      <h1>Approval List</h1>
+      <div>
+        <div class="btn_area">
+          <button class="btn-search">
+            <a href="/approval/approvalRequest">기안</a>
+          </button>
         </div>
+        <div>
+          <table>
+            <colgroup>
+              <col width="25%" />
+              <col width="25%" />
+              <col width="25%" />
+              <col width="25%" />
+            </colgroup>
+            <thead>
+              <tr>
+                <th>순번</th>
+                <th>제목</th>
+                <th>결재상황</th>
+                <th>작성자</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% for(const approval of approvals ){ %>
+              <tr>
+                <td></td>
+                <td><%= approval.title %></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <%}%>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
