--- a/todo_FE/views/board/boardDetail.html
+++ b/todo_FE/views/board/boardDetail.html
@@ -7,6 +7,41 @@
     <title>Board Detail</title>
   </head>
   <body>
-    Board Detail
+    <header class="main-header">
+      <a href="/" id="main-logo">YJHJ</a>
+      <nav>
+        <ul>
+          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
+          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
+          <li><a href="/approvalList">Approval</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li><a href="/signup">SignUp</a></li>
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <form action="/yjBoard/detail" method="POST">
+        <table>
+          <tr>
+            <td>제목</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>내용</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>작성자</td>
+            <td></td>
+          </tr>
+          <button>수정</button>
+          <button>삭제</button>
+        </table>
+      </form>
+    </main>
   </body>
 </html>
