--- a/todo_FE/views/board/boardWrite.html
+++ b/todo_FE/views/board/boardWrite.html
@@ -9,31 +9,44 @@
     <link rel="stylesheet" href="/css/header.css" />
   </head>
   <body>
-    <header>
-      <header class="main-header">
-        <a href="/" id="main-logo">YJHJ</a>
-        <nav>
-          <ul>
-            <li><a href="/yjBoard">BoardYJ</a></li>
-            <li><a href="/hjBoard">BoardHJ</a></li>
-          </ul>
-        </nav>
-      </header>
+       <header class="main-header">
+      <a href="/" id="main-logo">YJHJ</a>
+      <nav>
+        <ul>
+          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
+          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
+          <li><a href="/approvalList">Approval</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li><a href="/signup">SignUp</a></li>
+          <li><a href="/login">Login</a></li>
+        </ul>
+      </nav>
+    </header>
     </header>
     <main>
-      <table>
-        <tr>
-          <td>제목</td>
-          <td><input type="text" name="title" /></td>
-        </tr>
-        <tr>
-          <td>내용</td>
-          <td>
-            <textarea name="content"></textarea>
-          </td>
-        </tr>
-      </table>
-      <button>게시글 추가</button>
+      <form action="/yjBoard/write" method="POST">
+        <table>
+          <tr>
+            <td>제목</td>
+            <td><input type="text" name="boardTitle" id="boardTitle" /></td>
+          </tr>
+          <tr>
+            <td>내용</td>
+            <td>
+              <textarea name="boardContent" id="boardContent"></textarea>
+            </td>
+          </tr>
+          <tr>
+            <td>작성자</td>
+            <td><input type="text" name="createUserId" id="createUserId" /></td>
+          </tr>
+          <tr></tr>
+        </table>
+        <button>게시글 추가</button>
+      </form>
     </main>
   </body>
 </html>
