[추가] yjboard ejs 템플릿으로 수정, 리스트 구현, header 공통 컴포넌트, edit delete ui 위치 수정(리스트로)
어제 야근잔업때 코드 재수정하고 push하려했는데 업무사항에만 수정하고 push를 잊었습니다. 죄송합니다 절대 잊지않겠습니다.

--- a/todo_FE/views/boardWrite.ejs
+++ b/todo_FE/views/boardWrite.ejs
@@ -9,23 +9,7 @@
     <link rel="stylesheet" href="/css/header.css" />
   </head>
   <body>
-       <header class="main-header">
-      <a href="/" id="main-logo">YJHJ</a>
-      <nav>
-        <ul>
-          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
-          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
-          <li><a href="/approvalList">Approval</a></li>
-        </ul>
-      </nav>
-      <nav>
-        <ul>
-          <li><a href="/signup">SignUp</a></li>
-          <li><a href="/login">Login</a></li>
-        </ul>
-      </nav>
-    </header>
-    </header>
+    <%- include('includes/header') %>
     <main>
       <form action="/yjBoard/write" method="POST">
         <table>
@@ -39,11 +23,6 @@
               <textarea name="boardContent" id="boardContent"></textarea>
             </td>
           </tr>
-          <tr>
-            <td>작성자</td>
-            <td><input type="text" name="createUserId" id="createUserId" /></td>
-          </tr>
-          <tr></tr>
         </table>
         <button>게시글 추가</button>
       </form>
