--- a/todo_FE/views/HJ_Board.ejs
+++ b/todo_FE/views/HJ_Board.ejs
@@ -10,22 +10,7 @@
     <link rel="stylesheet" href="/css/board_til.css" />
   </head>
   <body>
-    <header class="main-header">
-      <a href="/" id="main-logo">YJHJ</a>
-      <nav>
-        <ul>
-          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
-          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
-          <li><a href="/approvalList">Approval</a></li>
-        </ul>
-      </nav>
-      <nav>
-        <ul>
-          <li><a href="/signup">SignUp</a></li>
-          <li><a href="/login">Login</a></li>
-        </ul>
-      </nav>
-    </header>
+    <%- include('includes/header') %>
     <main>
       <h2>HJ Board</h2>
       <!-- list를 Grid 형식으로 만들어볼까 고민 중 -->
