--- a/todo_FE/views/board/approval/Approval_Form.ejs
+++ b/todo_FE/views/board/approval/Approval_Form.ejs
@@ -10,22 +10,7 @@
   </head>
 
   <body>
-    <header class="main-header">
-      <a href="/" id="main-logo">YJHJ</a>
-      <nav>
-        <ul>
-          <li><a href="/yjBoard">BoardYJ-TIL</a></li>
-          <li><a href="/hjBoard">BoardHJ-TIL</a></li>
-          <li><a href="/approvalList">Approval</a></li>
-        </ul>
-      </nav>
-      <nav>
-        <ul>
-          <li><a href="/signup">SignUp</a></li>
-          <li><a href="/login">Login</a></li>
-        </ul>
-      </nav>
-    </header>
+    <%- include('includes/header') %>
     <main class="base_form">
       <h1>Approval Form</h1>
       <div>
