--- a/todo_FE/views/includes/board-item.ejs
+++ b/todo_FE/views/includes/board-item.ejs
@@ -2,7 +2,7 @@
   <h2><%= post.boardTitle %></h2>
   <p><%= post.boardContent %></p>
   <div class="post-actions">
-    <form action="/posts/<%= post.id %>/delete" method="POST">
+    <form action="/yjBoard/<%= post.id %>/delete" method="POST">
       <button class="btn btn-alt">Delete Post</button>
     </form>
     <a href="/yjBoard/<%= post.id %>/edit">Edit Post</a>
