--- a/todo_FE/views/404.ejs
+++ b/todo_FE/views/404.ejs
@@ -4,18 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <%- title: post.boardTitle %> >
+    <title>Document</title>
   </head>
-
   <body>
     <%- include('includes/header') %>
-    <main id="post-detail">
-      <h1><%= post.boardTitle %></h1>
+    <main>
+      <h1>We could not find this resource!</h1>
 
-      <hr />
-      <section>
-        <p id="body"><%= post.boardContent %></p>
-      </section>
+      <a class="btn" href="/">Back To Safety!</a>
     </main>
   </body>
 </html>
