--- a/todo_FE/views/YJ_Board.ejs
+++ b/todo_FE/views/YJ_Board.ejs
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="/css/board_YJ.css" />
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/posts.css" />
   </head>
   <body>
     <%- include('includes/header') %>
     <main>
       <h2>게시물 리스트</h2>
-      <button><a href="/yjBoard/write">게시글 추가!</a></button>
+      <button class="btn"><a href="/yjBoard/write">게시글 추가!</a></button>
       <% if(!posts || posts.length === 0) { %>
-      <p>No posts found - 추가하시겠습니까??</p>
-      <a class="btn" href="/yjBoard/write">Create a new content</a>
+      <p>생성된 게시물이 없습니다! - 추가하시겠습니까??</p>
+      <a class="btn" href="/yjBoard/write">Create a new posting!</a>
       <% } else { %>
       <ol id="board-list">
         <% for (const post of posts) { %>
