[수정] 세션작업중
실제 로그인시 세션값 들어가는 것 확인

--- a/todo_FE/views/401.ejs
+++ b/todo_FE/views/401.ejs
@@ -1,7 +1,15 @@
 <!-- 
     세션을 획득하지 못했을 때 나타나는 페이지
  -->
-
+ <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="/css/common.css" />
+  <link rel="stylesheet" href="/css/header.css" />
+  <link rel="stylesheet" href="/css/board_til.css" />
+</head>
 <body>
   <%- include('includes/header.ejs') %>
   <main>
