--- a/todo_FE/views/login.ejs
+++ b/todo_FE/views/login.ejs
@@ -11,7 +11,7 @@
    <%- include('includes/header') %>
   <body>
     <div class="login-section">
-      <form class="login-input" action="/login" method="GET">
+      <form class="login-input" action="/login" method="POST">
         <h1>Login</h1>
 				<div class="login-id">
         <input id="id" type="text" placeholder="아이디" name="userid"/>
