--- a/todo_FE/views/board/approval/Approval_Form.ejs
+++ b/todo_FE/views/board/approval/Approval_Form.ejs
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/approval.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+
     <title>Document</title>
   </head>
 
   <body>
-    <%- include('includes/header') %>
+    <%- include('../../includes/header') %>
     <main class="base_form">
       <h1>Approval Form</h1>
       <div>
