--- a/todo_FE/views/board/approval/Approval_List.ejs
+++ b/todo_FE/views/board/approval/Approval_List.ejs
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/approval.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+
     <title>Document</title>
   </head>
-
   <body>
-    <%- include('includes/header') %>
+    <%- include('../../includes/header') %>
     <main class="base_form">
       <h1>Approval List</h1>
       <div>
