[수정] 메인페이지 간단한  css 수정

--- a/todo_FE/views/index.ejs
+++ b/todo_FE/views/index.ejs
@@ -25,7 +25,7 @@
         추 후 컴포넌트화 예정이며 기능도 추가하자!
     -->
     <%- include('includes/header') %>
-    <main>
+    <main class="base_form">
       <section class="todoStyle">
         <!-- todo input box 
           
