[수정] 메인 간단한 디자인 수정

--- a/todo_FE/temp_react/src/components/views/mainDashBoard/MainDashBoardPage.css
+++ b/todo_FE/temp_react/src/components/views/mainDashBoard/MainDashBoardPage.css
@@ -5,4 +5,17 @@
 
 .board-item-title {
     border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.board-item-title .boardTitle {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+
+.board-item-function {
+    display: flex;
+    justify-content: flex-end;
+
 }
