--- a/client/src/components/views/YjBoard/YjBoard.css
+++ b/client/src/components/views/YjBoard/YjBoard.css
@@ -3,8 +3,32 @@
   margin: 2rem auto;
 }
 
-.tableform {
+.base_form {
   text-align: center;
   margin: 2rem auto;
   padding: 10px;
+  width: 100%;
+  border: 2px;
+}
+
+.list_styles button {
+  background-color: rgb(188, 240, 235);
+  border-radius: 4px;
+  font-weight: bold;
+  margin: 0 auto;
+  width: 100px;
+}
+
+.list_styles button:hover {
+  background-color: rgb(144, 236, 227);
+}
+
+.list_body {
+  text-align: center;
+  width: 20rem;
+  margin: 3rem auto;
+  padding: 0.5rem;
+  background-color: rgb(222, 235, 233);
+  border-radius: 4px;
+  border-bottom: 2px solid rgb(9, 78, 71);
 }
