--- a/client/src/components/views/YjBoard/YjBoardwrite.css
+++ b/client/src/components/views/YjBoard/YjBoardwrite.css
@@ -9,11 +9,12 @@
   max-width: 100%;
   border-radius: 6px;
   border: 1px solid #ccc;
+  margin-top: 1rem;
 }
 
 .board {
   /* display: flex; */
-  margin: 2rem auto;
+  margin: 4rem auto;
   background-color: beige;
   padding: 4rem;
   border-radius: 2rem;
