[수정] url id값에 따라 동적 변경

--- a/client/src/components/views/YjBoard/YjBoardwrite.css
+++ b/client/src/components/views/YjBoard/YjBoardwrite.css
@@ -29,6 +29,10 @@
   color: blue;
 }
 
+.board button:hover {
+  background-color: antiquewhite;
+}
+
 /* .write_link {
   margin: 2rem;
   background-color: white;
