--- a/client/src/components/approval/Approval.css
+++ b/client/src/components/approval/Approval.css
@@ -1,11 +1,24 @@
 table {
-    border: 1px solid black;
+    border-collapse: collapse;
 }
 
-table td {
+.approval_list_thead th {
+    border-top: 2px solid black;
+    border-bottom: 1px solid gray;
     text-align: center;
+    height: 40px;
+    vertical-align: middle;
+}
+
+.approval_list_thead td {
+    text-align: center;
+    border-bottom: 1px solid gray;
+    height: 30px;
 }
 
 .header-table {
     width: 100%;
+}
+
+.approval_form {
 }
