--- a/client/src/components/common/Header.css
+++ b/client/src/components/common/Header.css
@@ -32,3 +32,21 @@
   border-radius: 4px;
   padding: 2px;
 }
+
+.drawer-btn {
+  display: flex;
+  flex-direction: column;
+  width: 2rem;
+  height: 2rem;
+  justify-content: space-around;
+  padding: 0.1rem;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.drawer-btn span {
+  width: 2rem;
+  height: 2px;
+  background-color: rgb(20, 20, 150);
+}
