[수정] editpage 모달창 추가, yjboardpage 검색기능 추가

--- a/client/src/components/TodoPage/Todo.css
+++ b/client/src/components/TodoPage/Todo.css
@@ -43,7 +43,15 @@
 }
 
 .edit-modal {
-  padding: 10px;
-  margin: 0 auto;
-  background-color: #808080;
+  position: fixed;
+  top: 20vh;
+  left: 5%;
+  width: 90%;
+  height: 10rem;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 14px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  z-index: 30;
+  animation: slide-down 300ms ease-out forwards;
 }
