--- a/client/src/css/Common.module.css
+++ b/client/src/css/Common.module.css
@@ -7,3 +7,21 @@ body {
   width: 50rem;
   margin: 2rem auto;
 }
+
+.button_area {
+  text-align: right;
+}
+
+.button_confirm {
+  border-radius: 25px;
+  margin-left: 1rem;
+  color: blue;
+  border: 1px solid blue;
+}
+
+.button_cancel {
+  border-radius: 25px;
+  margin-left: 1rem;
+  color: red;
+  border: 1px solid red;
+}
