--- a/client/src/components/mainDashBoard/MainDashBoard.css
+++ b/client/src/components/mainDashBoard/MainDashBoard.css
@@ -11,10 +11,13 @@
     height: 100px;
     margin: 2rem auto;
     margin-bottom: 80px;
+    background-color: white;
+    border-radius: 15px;
 }
 
 .board-item-title {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid grey;
+    padding: 5px;
     display: flex;
     justify-content: space-between;
 }
@@ -22,6 +25,17 @@
 .board-item-title .boardTitle {
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+.board-item-content {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    padding: 3px;
+}
+
+.board-item-date {
+    font-weight: bold;
+    margin-bottom: 0.4rem;
 }
 
 .board-item-function {
