--- a/client/src/components/TodoPage/Todo.css
+++ b/client/src/components/TodoPage/Todo.css
@@ -55,3 +55,15 @@
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
 }
+
+.checkbox {
+  min-width: none;
+  min-height: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 0.5rem 0.5rem;
+  border-radius: 50px;
+  border: 1px solid rgb(255, 254, 254);
+  cursor: pointer;
+  text-align: center;
+}
