[수정] YjTodo 스타일링 및 정렬 수정, header todoitem count 추가, userList 추가

--- a/client/src/components/common/Header.css
+++ b/client/src/components/common/Header.css
@@ -9,6 +9,10 @@
   font-weight: bold;
 }
 
+.main-header Link {
+  width: 200px;
+}
+
 .main-header ul {
   display: flex;
   justify-content: flex-end;
