--- a/client/src/components/TodoPage/Todo.css
+++ b/client/src/components/TodoPage/Todo.css
@@ -1,26 +1,8 @@
-.todo-template1 {
-  /* background-color: rgb(223, 220, 230); */
-  width: 50rem;
-  margin: 2rem auto;
-}
-
-/* .todo-template {
-  background-color: white;
-  margin: 0 auto;
-  width: 600px;
-  height: 700px;
-  margin-top: 25px;
-  margin-bottom: 45px;
-  padding: 15px;
-  border-radius: 10px;
-  border: 2px solid rgb(98, 94, 94);
-} */
-
 .todo-header {
   border-bottom: 0.5px solid rgb(98, 94, 94);
 
   padding: 12px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .todo-header h1 {
@@ -36,13 +18,29 @@
   /* text-align: left; */
 }
 
-.todo-create input {
-  width: 200px;
-  height: 20px;
-  margin-right: 5px;
+.todo-item-count {
+  text-align: center;
+  width: 80px;
+  height: 70px;
+  border: 2px solid rgb(175, 209, 255);
+  background-color: rgb(175, 209, 255);
+  color: rgb(69, 55, 191);
+  border-radius: 4px;
+  margin: 10px auto;
+  padding: 10px;
+  font-weight: 500;
 }
 
-.edit-modal {
+.todo-create input {
+  width: 80%;
+  height: 20px;
+  margin-left: 10px;
+  border-radius: 4px;
+  float: left;
+  text-align: center;
+}
+
+/* .edit-modal {
   position: fixed;
   top: 20vh;
   left: 5%;
@@ -54,16 +52,56 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
-}
+} */
 
 .checkbox {
   min-width: none;
   min-height: none;
-  width: 1.5rem;
-  height: 1.5rem;
-  margin: 0.5rem 0.5rem;
-  border-radius: 50px;
-  border: 1px solid rgb(255, 254, 254);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 10px;
+  margin-right: 2rem;
+  border: 1px solid rgb(197, 188, 188);
   cursor: pointer;
-  text-align: center;
+  vertical-align: middle;
+  float: left;
+}
+
+.checkbox:hover {
+  background-color: rgb(196, 183, 183);
+}
+
+.body {
+  margin-top: 2px;
+}
+
+.base_form {
+  text-align: left;
+}
+
+.base_form ul {
+  padding: 10px;
+  list-style: none;
+  margin-top: 10px;
+  margin-bottom: -15px;
+}
+
+.base_form ul li {
+  padding: 10px;
+  border: 1px solid rgb(95, 89, 89);
+  border-radius: 10px;
+}
+
+.todo-create button {
+  width: 13rem;
+  height: 1.6rem;
+  border-radius: 3px;
+  background-color: white;
+  color: blue;
+  font-weight: bold;
+  cursor: grab;
+}
+
+.todo-create button:hover {
+  background-color: rgb(170, 189, 251);
 }
