--- a/client/src/css/Common.module.css
+++ b/client/src/css/Common.module.css
@@ -20,9 +20,17 @@ body {
   border: 1px solid blue;
 }
 
+.button_confirm:hover {
+  background-color: rgb(147, 147, 209);
+}
+
 .button_cancel {
   border-radius: 25px;
   margin-left: 1rem;
   color: red;
   border: 1px solid red;
+}
+
+.button_cancel:hover {
+  background-color: rgb(210, 178, 178);
 }
