--- a/client/src/components/views/YjBoard/YjBoard.css
+++ b/client/src/components/views/YjBoard/YjBoard.css
@@ -11,18 +11,29 @@
 }
 
 .list_body {
-  background-color: aqua;
   margin: 10px auto;
 }
 
 .list_table {
   text-align: center;
-  width: 100%;
-  margin: 3rem auto;
+  margin: 1rem auto;
   padding: 2rem;
   border-radius: 4px;
   border-color: rgb(144, 236, 227);
   border-width: 2px;
+}
+
+.list_table button {
+  all: unset;
+  cursor: pointer;
+  background-color: rgb(220, 244, 236);
+  border-radius: 4px;
+  padding: 0.5rem;
+}
+
+.list_table button:hover {
+  background-color: antiquewhite;
+  border-radius: 4px;
 }
 
 .list_table td {
