--- a/client/src/components/common/MenuModal.module.css
+++ b/client/src/components/common/MenuModal.module.css
@@ -7,3 +7,13 @@
   right: 0px;
   position: fixed;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 20;
+  /* background-color: rgba(255, 253, 253, 0.75); */
+}
