--- a/client/src/components/modal/yjTodo/TodoModal.module.css
+++ b/client/src/components/modal/yjTodo/TodoModal.module.css
@@ -7,15 +7,11 @@
   border-radius: 4px;
 }
 
-.body {
+.completed_body {
   text-align: center;
 }
 
-.completed_modal {
-  text-align: center;
-}
-
-.completed_modal button {
+.completed_btn button {
   margin: 10px auto;
   width: 80px;
   font-size: 20px;
