--- a/client/src/components/member/Signup.css
+++ b/client/src/components/member/Signup.css
@@ -3,7 +3,7 @@
 }
 
 #signup-form {
-  background-color: white;
+  /* background-color: white; */
   width: 50%;
   text-align: center;
   margin: 0 auto;
