--- a/todonext/components/layout/MainHeader.module.css
+++ b/todonext/components/layout/MainHeader.module.css
@@ -1,32 +1,32 @@
 .header {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .header ul {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .logo {
-    height: 100%;
+  height: 100%;
 }
 
-.navigation {
-
+.navigation li {
+  margin-right: 1rem;
 }
 
 .icon {
-    margin-left: 0.5rem;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+  margin-left: 0.5rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon svg {
-    width: 2em;
-    height: 2rem;
+  width: 2em;
+  height: 2rem;
 }
