[수정] yjBoard, todo, signup,Login api, 기능 등 수정

--- a/client/src/components/TodoPage/Todo.css
+++ b/client/src/components/TodoPage/Todo.css
@@ -17,6 +17,10 @@
   font-size: 20px;
   /* text-align: left; */
 }
+.type {
+  font-style: italic;
+  text-decoration: underline;
+}
 
 .todo-item-count {
   text-align: center;
