--- a/client/src/css/Common.module.css
+++ b/client/src/css/Common.module.css
@@ -38,9 +38,11 @@ body {
 .button_delete {
   border-radius: 25px;
   margin-left: 20rem;
-  margin-top: auto;
-  width: 40px;
+  /* margin-bottom: 10px; */
+  width: 50px;
+  height: 25px;
   cursor: pointer;
+  float: right;
 }
 
 .button_delete:hover {
