--- a/todonext/components/todos/Todo.module.css
+++ b/todonext/components/todos/Todo.module.css
@@ -1,9 +1,15 @@
 .grid {
-  list-style: none;
+  /* list-style: none;
   margin: 0;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  gap: 1.5rem;
-  align-content: center;
+  gap: 1.5rem; */
+  background-color: rgb(248, 245, 240);
+  text-align: center;
+  display: grid;
+}
+
+.box {
+  text-align: center;
 }
